--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-countdown-circle-timer": "^3.2.1",
