--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/base": "^5.0.0-beta.40",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,15 +13,18 @@
     "bootstrap": "^5.3.3",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
+    "react-pagination-table": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.3",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "use-sound": "^4.0.1",
