--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@mui/base": "^5.0.0-beta.40",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "emoji-mart": "^5.5.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
