--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-bootstrap": "^2.10.2",
     "react-circular-progressbar": "^2.1.0",
     "react-countdown-circle-timer": "^3.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
